...
        yesButton.isEnabled = enable
        noButton.isEnabled = enable
    }
    
    func showFinalAlert() {
        let viewModel = AlertModel(
                title: "Этот раунд окончен!",
                message: presenter.makeResultString(),
                buttonText: "Сыграть еще раз",
                completion: { [ weak self ] in
                    self?.presenter.restartGame()
                    self?.questionFactory?.requestNextQuestion()
                }
...
